<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff"
    >

    <Button
        android:id="@+id/supportBtn"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="108dp"
        android:text="@string/comp_support"
        android:background="#000"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="162dp"
        android:text="@string/comp_history"
        android:background="#000"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/visionBtn"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="162dp"
        android:text="@string/comp_vision"
        android:background="#000"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addressBtn"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="108dp"
        android:background="#000"
        android:textColor="#fff"
        android:text="@string/comp_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visionBtn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/a" />

</androidx.constraintlayout.widget.ConstraintLayout>